# ndkthirdso

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/test/ndkthirdso/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/test/ndkthirdso/: JniUtil.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/test/ndkthirdso/: ExampleUnitTest.java
